       ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_NORMAL, ECORE_X_ATOM_E_ILLUME_WINDOW_STATE_FLOATING

2012-09-18  Patryk Kaczmarek

       * Fix escaping in ecore_file_escape_name() to handle tab and
       newline right.

2012-09-21  Carsten Haitzler (The Rasterman)

       * Fix ecore_x_image_is_argb32_get() to return correctly on
       endianess.

2012-09-21  Christopher Michael

       * Fix ecore_x_randr to properly return output modes from
       ecore_x_randr_output_modes_get().

2012-09-27  Carsten Haitzler (The Rasterman)

       * Fix ecore_imf buf in the ibus module where it may segv
       accessing a wrong context handle.

2012-10-02  Daniel Willmann

       * Fix memory allocation size in ecore_thread_feedback()

2012-10-03  Daniel Wilmann
       * Fix memory allocation size in ecore_x xcb randr function

2012-10-04  Cedric Bail

	* Add ecore_x_input_raw_select and ECORE_X_RAW_*.

2012-10-04  Sebastian Dransfeld

	* Expose ecore_x_selection_converter_text

2012-10-05  Cedric Bail

	* Properly reschedule call to curl.

2012-10-05  Eduardo Lima (Etrunko)

       * Wayland SHM now features a mechanism to synchronize rendering with
       the compositor, removing tearing effect in animations when using that
       engine.
       
2012-10-10 Michal Pakula vel Rutka

       * Fix: Send ECORE_X_EVENT_SELECTION_NOTIFY even if there is no data.

2012-10-15  Carsten Haitzler (The Rasterman)

       * Since evas has 16bit engines removed, remove support from ecore-evas.

2012-10-16  Carsten Haitzler (The Rasterman)

       * Since evas has 8bit engines removed, remove support from ecore-evas.

2012-10-16  Christopher Michael

       * Update Ecore_Wayland to build & work with newest wayland (0.99) from git

2012-10-19  Cedric Bail

       * Use Eina_Thread for Ecore_Thread.

2012-11-23  Eduardo Lima (Etrunko)

       * Fix leak of strcut wl_registry in Ecore Wayland

2012-11-23  Sebastian Dransfeld

	* Correctly define alloca
	* Fix ieeefp.h inclusion on Solaris