@@ -59,3 +59,4 @@ Vikram Narayanan <vikram186@gmail.com>
 Daniel Zaoui <daniel.zaoui@samsung.com>
 Yakov Goldberg <yakov.g@samsung.com>
 Eduardo Lima (Etrunko) <eblima@gmail.com>
+Alexey Yakovenko <wakeroid@gmail.com>
